app/components/layout/index.module.css
.container {
	width: 100%;
}

.header {
	display: flex;
	width: 100%;
	height: var(--layout-nav-height);
	align-items: center;
	gap: var(--s-3);
	border-bottom: 1.5px solid var(--color-border);
	-webkit-backdrop-filter: var(--backdrop-filter);
	backdrop-filter: var(--backdrop-filter);
	background-color: transparent;
	font-weight: bold;
	padding-inline: var(--s-4);
	position: sticky;
	top: 0;
	z-index: 10;
}

.siteTitle {
	display: flex;
	align-items: center;
	gap: var(--s-2);
	height: 100%;
	min-width: 0;
}

.siteLogo {
	display: grid;
	place-items: center;
	width: 36px;
	height: 36px;
	background-color: var(--color-accent);
	border-radius: var(--rounded-xs);
	font-size: var(--fonts-lg);
	font-weight: var(--bold);
	color: var(--color-text);
	text-decoration: none;
	flex-shrink: 0;
	transition: background-color 0.2s;
}

.siteLogo:hover {
	background-color: var(--color-accent-high);
	color: var(--color-text-inverse);
}

.siteLogo:focus-visible {
	outline: var(--input-focus-ring);
	outline-offset: 1px;
}

.separator {
	font-size: var(--fonts-xs);
	color: var(--color-text-high);
	font-weight: var(--bold);
	opacity: 0.5;
	animation: fadeIn 200ms ease-out 150ms both;
}

@keyframes fadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 0.5;
	}
}

.pageIcon {
	width: 28px;
	height: 28px;
	flex-shrink: 0;
	animation: fadeInFull 200ms ease-out 150ms both;
	object-fit: cover;
}

@keyframes fadeInFull {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

.pageName {
	font-size: var(--fonts-xs);
	font-weight: var(--semi-bold);
	color: var(--color-text);
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	animation: fadeInFull 200ms ease-out 150ms both;
}

@media screen and (display-mode: standalone) {
	.header {
		align-items: flex-end;
		padding-top: calc(var(--s-2) + env(safe-area-inset-top));
	}
}

.sideNavEmpty {
	font-size: var(--fonts-xs);
	color: var(--color-text-high);
	padding: var(--s-1) var(--s-2);
}

.mobileLogo {
	display: none;
}

@media screen and (max-width: 599px) {
	.mobileLogo {
		display: grid;
		place-items: center;
		width: 36px;
		height: 36px;
		background-color: var(--color-accent);
		border-radius: var(--rounded-xs);
		font-size: var(--fonts-lg);
		font-weight: var(--bold);
		color: var(--color-text);
		text-decoration: none;
		flex-shrink: 0;
	}
}

